data types file name change and imports

--- a/datatypesfunctions/DataTypesFunctions.cabal
+++ b/datatypesfunctions/DataTypesFunctions.cabal
@@ -17,7 +17,7 @@ common warnings
 
 library
     import:           warnings
-    exposed-modules:  MyLib
+    exposed-modules:  DatatypesFunctions
     -- other-modules:
     -- other-extensions:
     build-depends:    base ^>=4.17.2.1
